--- a/style8.css
+++ b/style8.css
@@ -2,3 +2,8 @@
     box-sizing: border-box;
 }
 body{font-family: 'Roboto', sans-serif;}
+.container{
+    width: 1170px;
+    margin: 0 auto;
+    background-color: gray;
+}
