--- a/style8.css
+++ b/style8.css
@@ -1,9 +1,83 @@
 * {
     box-sizing: border-box;
 }
-body{font-family: 'Roboto', sans-serif;}
+body{font-family: 'Roboto', sans-serif;
+background-image: url(images/patt.png);}
+.header{
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 25px 0;
+}
 .container{
     width: 1170px;
     margin: 0 auto;
-    background-color: gray;
+    
+}
+.logo{
+    margin-top: 7px;
+}
+.col-md-3{
+    width: 25%;
+}
+.col-md-6{
+    width: 50%;
+}
+.menu li{
+    width: 25%;
+    /*display: block;
+    height: 50px;*/
+    float: left;
+    border-left: 1px solid #2c71b8;
+}
+.menu li:last-child{border-right: 1px solid #2c71b8;}
+[class*="col-"]{
+    float: left;
+}
+.row:after, .menu:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+.menu a{
+    display: block;
+    text-decoration: none;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    font-weight: 300;
+    color: #2c71b8;
+    font-size: 21px;
+}
+.menu a:hover{
+    background-color: #2c71b8;
+    color: white;
+}
+.search-field{
+    width: 75%;
+    float: left;
+    line-height: 50px;
+}
+.ordbut {
+    float: left;
+}
+.btn{
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    margin-top: 5px;
+    padding: 10px;
+
+}
+.searchbtn{
+    position: relative;
+    left: -40px;
+    top: -3px;
+    height: 30px;
+    background-color: #2c71b8;
+}
+.search-field input{
+    padding: 9px;
+    margin-left: 30px;
+    margin-top: 2px;
+    width: 150px;
+    font-size: 21px;
 }
