--- a/style8.css
+++ b/style8.css
@@ -3,24 +3,32 @@
 }
 body{font-family: 'Roboto', sans-serif;
 background-image: url(images/patt.png);}
+[class*="col-"]{
+    float: left;
+}
 .header{
     background-color: rgba(255, 255, 255, 0.75);
     padding: 25px 0;
 }
 .container{
-    width: 1170px;
+    width: 1200px;
     margin: 0 auto;
-    
 }
+ 
 .logo{
     margin-top: 7px;
 }
+
 .col-md-3{
     width: 25%;
 }
 .col-md-6{
     width: 50%;
 }
+.col-md-9{
+    width: 75%;
+}
+
 .menu li{
     width: 25%;
     /*display: block;
@@ -28,11 +36,9 @@ background-image: url(images/patt.png);}
     float: left;
     border-left: 1px solid #2c71b8;
 }
-.menu li:last-child{border-right: 1px solid #2c71b8;}
-[class*="col-"]{
-    float: left;
+.menu li:last-child{border-right: 1px solid #2c71b8;
 }
-.row:after, .menu:after {
+.row:after, .menu:after, .subprod::after{
     content: "";
     display: block;
     clear: both;
@@ -47,19 +53,51 @@ background-image: url(images/patt.png);}
     color: #2c71b8;
     font-size: 21px;
 }
-.menu a:hover{
+.menu>li:hover a{
     background-color: #2c71b8;
     color: white;
 }
+.subprod{
+    width: 300px;
+    position: absolute;
+    visibility: hidden;
+}
+.subprod li{
+    width: 300px;
+    
+    background-color: #2c71b8;
+}
+.subprod li a{
+    display: block;
+    text-decoration: none;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    font-weight: 300;
+    color: white;
+    font-size: 21px;
+}
+.subprod>li>a:hover{
+    background-color:#fff;
+    color: #2c71b8;
+    li.prod>background-color: #2c71b8;
+}
+.menu>li.prod:hover .subprod{
+    visibility: visible;
+    clear: both;
+   
+}
 .search-field{
-    width: 75%;
+    /*width: 75%;*/
+    margin: 0px;
     float: left;
     line-height: 50px;
 }
 .ordbut {
-    float: left;
-}
-.btn{
+    /*position: static;*/
+    background-image: url(images/icon\ \(1\).png);
+    background-repeat: no-repeat;
+    background-position: 10px 11px;
     width: 40px;
     height: 40px;
     background-color: white;
@@ -68,16 +106,94 @@ background-image: url(images/patt.png);}
 
 }
 .searchbtn{
+    float: left;
     position: relative;
-    left: -40px;
-    top: -3px;
+    left: 198px;
+
+    top: 10px;
+    width: 30px;
     height: 30px;
     background-color: #2c71b8;
+    background-image: url(images/icon\ \(4\).png);
+    background-repeat: no-repeat;
+    background-position: 6px 6px;
 }
-.search-field input{
-    padding: 9px;
-    margin-left: 30px;
+.search-field>input{
+    padding: 6px;
+    /*margin-left: 20px;*/
     margin-top: 2px;
-    width: 150px;
+    margin-right: 20px;
+    width: 200px;
+    padding-left: 10px;
+    padding-right: 40px;
+    font-size: 18px;
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid #2c71b8;
+    color: #2c71b8;
+    text-decoration-color: #2c71b8;
+}
+.products-count{
+    width: 18px;
+    height: 18px;
+    border-radius: 9px;
+    background-color: #2c71b8;
+    position: relative;
+    top: -18px;
+    left: -18px;
+}
+/*main block*/
+.list{
+    font-size: 21px;
+    color: white;
+}
+.tovitem{
+    width: 270px;
+    height: 655px;
+    margin: 15px;
+    float: left;
+    border: 1px solid white;
+}   
+.headline{
+    font-size: 48px;
+    font-weight: bold;
+    color: white;
+}
+.f30{
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+}
+.f21{
+    font-size: 21px;
+    color: white;
+}
+.f21>b{font-weight: bold;}
+.headline>sup{
+    vertical-align: super; 
+    font-size: 40px;
+}
+.info>p{
+    padding: 10px;
+}
+.price{
+    text-align: center;
+}
+.price>.details{
+    width: 210px;
+    height: 50px;
+    border: white 1px solid;
+    box-sizing: border-box;
+    margin: 8px;
+    background-color: #2c71b8;
+    color:white;
+}
+.price>.addcart{
+    width: 210px;
+    height: 50px;
+    border: white 1px solid;
+    box-sizing: border-box;
+    margin: 8px;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: #2c71b8;
     font-size: 21px;
 }
