--- a/style8.css
+++ b/style8.css
@@ -24,6 +24,10 @@ b{font-weight: bold;}
 .container{
     width: 1200px;
     margin: 0 auto;
+    overflow: hidden;
+}
+.row1{
+    padding: 5px 0;
 }
 .row:after, .menu:after, .subprod::after{
     content: "";
@@ -136,14 +140,24 @@ b{font-weight: bold;}
     color: #2c71b8;
     text-decoration-color: #2c71b8;
 }
-.products-count{
+.search-field>input:focus{
+    outline: none;
+}
+.searchbtn:focus{
+    outline: none;
+}
+#products-count{
     width: 18px;
     height: 18px;
-    border-radius: 9px;
+    border-radius: 50%;
     background-color: #2c71b8;
     position: relative;
     top: -18px;
     left: -18px;
+    color: white;
+    text-align: center;
+    line-height: 18px;
+    font-size: 11px;
 }
 /*----------------------------------------------main block-------------------------------------------------*/
 .slide{
@@ -161,6 +175,24 @@ b{font-weight: bold;}
 .list li{
     padding: 10px;
 }
+input[type="checkbox"]{
+    display: none;
+}
+label::before{
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    border: 1px solid white;
+    position: absolute;
+    top: 6px;
+}
+input[type="checkbox"]:checked + label::before{background-color: whitesmoke;}
+label{
+    position: relative;
+    padding-left: 20px;
+}
+
 .headline{
     font-size: 48px;
     font-weight: bold;
@@ -173,11 +205,19 @@ b{font-weight: bold;}
     position: relative;
     left: 700px;
     top: -50px;
+    border: #2c71b8;
+    color: white;
+    border: 1px solid white;
 }
 .sort select{
     width: 200px;
     height: 30px;
+    background-color: #2c71b8;
+    color: white;
+    border: 1px solid white;
 }
+.sort:non-active{border: none;}
+
 .f30{
     font-size: 30px;
     color: white;
@@ -193,16 +233,17 @@ b{font-weight: bold;}
     margin-left: 30px;
     float: left;
     border: 1px solid white;
+    position: relative;
 }   
 .image{
     background-color: rgba(255, 255, 255, 0.75);
-    width: 270px;
+    /*width: 270px;*/
     height: 180px;
     text-align: center;
-    line-height: 250px;
-    position: relative;
+    line-height: 180px;
+    margin: auto;
 }
-
+.image img{vertical-align: middle;}
 .frfav{
     width: 30px;
     height: 30px;
