--- a/style8.css
+++ b/style8.css
@@ -24,7 +24,7 @@ b{font-weight: bold;}
 .container{
     width: 1200px;
     margin: 0 auto;
-    overflow: hidden;
+
 }
 .row1{
     padding: 5px 0;
@@ -165,6 +165,18 @@ b{font-weight: bold;}
     height: 400px;
     background-color: rgba(0,0,0,0.5);
 }
+.slide1>div{
+    padding: 150px 0;
+    text-align: center;
+    color: white;
+    font-size: 50px;
+}
+.slick-dots li.slick-active button:before{
+    color: green;
+}
+.slick-dots li button:before{
+    font-size: 60px;
+}
 .list{
     width: 100%;
     border: 1px solid black;
@@ -273,7 +285,7 @@ label{
     background-repeat: no-repeat;
     background-position: 5px 5px;
 }
-.frfav2:hover{
+.frfav2:hover, .liked{
     background-color: #2c71b8;
     background-image: url(images/icon\ \(7\).png);
     background-repeat: no-repeat;
@@ -338,4 +350,41 @@ label{
     padding: 25px 0;
     height: 100px;
     float: left;
+}
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.25);
+    display: none;
+}
+.modal-block{
+    width: 300px;
+    margin: 80px auto;
+    height: 200px;
+    border: 1px solid gray;
+    background-color: white;
+    z-index: 100;
+    padding: 15px;
+    box-sizing: border-box;
+}
+.form-fields{
+    margin: 10px 0;
+}
+.form-fields .input-type{
+    width: 100%;
+    height: 30px;
+    padding: 5px;
+}
+.btn-close{
+    text-align: right;
+    cursor: pointer;
+}
+.hide{
+    display: none;
+}
+.show{
+    display: block;
 }
